@@ -1,3 +1,6 @@
+2010-06-21:
+	* (seebs) add mkstemp64
+
 2010-06-02:
 	* (seebs) add PSEUDO_NOSYMLINKEXP feature and documentation.
 
